# onitama-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
board_plugin/: Cargo.toml
board_plugin/src/: bounds.rs  events.rs  lib.rs
board_plugin/src/ai/: agent.rs  alpha_beta.rs  evaluation.rs  human.rs  mod.rs  random_agent.rs
board_plugin/src/button_plugin/: mod.rs
board_plugin/src/components/: allowed_move.rs  background.rs  board_tile.rs  card.rs  card_board.rs  card_index.rs  coordinates.rs  guide.rs  guide_text_timer.rs  mod.rs  pieces.rs  texts.rs
board_plugin/src/menu_plugin/: elements.rs  mod.rs
board_plugin/src/resources/: app_state.rs  board.rs  board_assets.rs  board_options.rs  card.rs  deck.rs  deck_options.rs  depth.rs  game.rs  game_state.rs  mod.rs  physical_deck.rs  selected.rs  selected_card.rs  text_handler.rs  tile.rs  tile_map.rs
board_plugin/src/systems/: ai_input.rs  board_input.rs  card_input.rs  game_state_process.rs  guide_text_change.rs  mod.rs  text_change.rs
menu_plugin/: Cargo.toml
src/: main.rs
web/: onitama-rs.d.ts  onitama-rs.js  onitama-rs_bg.wasm.d.ts
